--- a/public/assets/stiinte-exacte/biologie/9/celule/introducere.html
+++ b/public/assets/stiinte-exacte/biologie/9/celule/introducere.html
@@ -1,3 +1,3 @@
-<h2>Introducereeee</h2>
+<h2>Introducere</h2>
 <p>Celulele sunt unitățile fundamentale ale vieții...</p>
 <img src="assets/stiinte-exacte/biologie/9/celule/images/img1/Users/cosmindumitru/Downloads/Celulă (biologie) - Wikipedia.html.png" alt="Celulă" style="max-width: 100%;">
